Final HTML and mobile  styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name=viewport content="width=device-width, initial-scale=1" charset="utf-8">
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link rel="shortcut icon" href="resources/images/colmar_favicon.ico" type="image/x-icon">
     <title>Colmar Academy</title>
 </head>
 
@@ -14,11 +15,11 @@
 
     <header>
         <div class="logo desktop">
-            <img src="resources/images/ic-logo.svg">
+            <img src="resources/images/ic-logo.svg" alt="Academy logo">
             <span class="colmar">Colmar</span>
             <span class="academy">Academy</span>
         </div>
-        <div class="nav-links desktop">
+        <nav class="nav-links desktop">
             <ul>
                 <li>
                     <a href="#">Campus</a>
@@ -33,22 +34,22 @@
                     <a href="#">Sign In</a>
                 </li>
             </ul>
-        </div>
+        </nav>
 
         <!-- Mobile Header -->
 
-        <div class="mobile">
+        <nav class="mobile">
             <img src="resources/images/ic-logo.svg">
             <img src="resources/images/ic-on-campus.svg">
             <img src="resources/images/ic-online.svg">
             <img src="resources/images/ic-login.svg">
-        </div>
+        </nav>
     </header>
 
     <!-- Banner -->
 
     <div class="banner">
-        <img src="resources/images/banner.jpg">
+        <img src="resources/images/banner.jpg" alt="Image of a study group">
         <div class="info">
             <h1>Learn something new everyday</h1>
             <p>Lorem impsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -60,14 +61,14 @@
 
     <div class="information">
         <div class="left desktop">
-            <img src="resources/images/information-main.jpg">
+            <img src="resources/images/information-main.jpg" alt="A man reading">
             <h2>It doesn't hurt to keep practicing</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <span class="img-footer">Emmanuel, Sr. Strategist at hiring.com</span>
         </div>
         <div class="right">
             <div class="box">
-                <img src="resources/images/information-orientation.jpg" class="information-orientation">
+                <img src="resources/images/information-orientation.jpg" class="information-orientation" alt="An image of a path walkway on campus">
                 <div class="copy">
                     <h3>Orientation date</h3>
                     <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -75,7 +76,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="resources/images/information-campus.jpg" class="information-campus">
+                <img src="resources/images/information-campus.jpg" class="information-campus" alt="Inside of a campus cafe">
                 <div class="copy">
                     <h3>Our campus</h3>
                     <p>Find which campus is close by you</p>
@@ -83,7 +84,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="resources/images/information-guest-lecture.jpg" class="information-guest-lecture">
+                <img src="resources/images/information-guest-lecture.jpg" class="information-guest-lecture" alt="Photo of Oliver Sack">
                 <div class="copy">
                     <h3>Our guest lecture</h3>
                     <p>Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -101,7 +102,7 @@
         </h2>
         <div class="row">
             <div class="learn-item">
-                <img src="resources/images/course-software.jpg" class="desktop">
+                <img src="resources/images/course-software.jpg" class="desktop" alt="Picture of two computer monitors">
                 <div class="info">
                     <h3>Software Engineering</h3>
                     <h4 class="desktop">Courses</h4>
@@ -109,7 +110,7 @@
                 </div>
             </div>
             <div class="learn-item">
-                <img src="resources/images/course-computer-art.jpg" class="desktop">
+                <img src="resources/images/course-computer-art.jpg" class="desktop" alt="Image of a person holding a smart phone">
                 <div class="info">
                     <h3>Computer Art</h3>
                     <h4 class="desktop">Courses</h4>
@@ -117,7 +118,7 @@
                 </div>
             </div>
             <div class="learn-item">
-                <img src="resources/images/course-design.jpg" class="desktop">
+                <img src="resources/images/course-design.jpg" class="desktop" alt="Photo of a person holding an antique camera">
                 <div class="info">
                     <h3>Design</h3>
                     <h4 class="desktop">Courses</h4>
@@ -127,7 +128,7 @@
         </div>
         <div class="row">
             <div class="learn-item">
-                <img src="resources/images/course-data.jpg" class="desktop">
+                <img src="resources/images/course-data.jpg" class="desktop" alt="Image of a Laptop computer with data visualizations displayed">
                 <div class="info">
                     <h3>Data</h3>
                     <h4 class="desktop">Courses</h4>
@@ -135,7 +136,7 @@
                 </div>
             </div>
             <div class="learn-item">
-                <img src="resources/images/course-business.jpg" class="desktop">
+                <img src="resources/images/course-business.jpg" class="desktop" alt="Artistic photo of chess pieces">
                 <div class="info">
                     <h3>Business</h3>
                     <h4 class="desktop">Courses</h4>
@@ -143,7 +144,7 @@
                 </div>
             </div>
             <div class="learn-item">
-                <img src="resources/images/course-marketing.jpg" class="desktop">
+                <img src="resources/images/course-marketing.jpg" class="desktop" alt="Image of a smart watch">
                 <div class="info">
                     <h3>Marketing</h3>
                     <h4 class="desktop">Courses</h4>
@@ -165,14 +166,14 @@
             </div>
             <div class="right desktop">
                 <div class="box">
-                    <img src="resources/images/thesis-fisma.jpg">
+                    <img src="resources/images/thesis-fisma.jpg" alt="Image of a smart phone and some working papers">
                     <div class="copy">
                         <h3>Fisma Design and </h3>
                         <p>Designer showcase of few prototype products</p>
                     </div>
                 </div>
                 <div class="box">
-                    <img src="resources/images/thesis-now-and-then.jpg">
+                    <img src="resources/images/thesis-now-and-then.jpg" alt="Photo of the Empire State building in New York City">
                     <div class="copy">
                         <h3>Now and then</h3>
                         <p>Research study about New York</p>
@@ -186,7 +187,7 @@
 
     <footer>
         <span>
-            © 2016 Colman Academy. All rights reserved.
+            © 2017 Colman Academy. All rights reserved.
         </span>
         <div class="links">
             <ul class="desktop">
@@ -198,3 +199,5 @@
 </body>
 
 </html>
+
+  <!-- https://s3.amazonaws.com/codecademy-content/courses/freelance-1/capstone-2/colmar-academy-spec.png -->
