--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     <footer>
         <span>
-            © 2017 Colman Academy. All rights reserved.
+            © 2017 Colmar Academy. All rights reserved.
         </span>
         <div class="links">
             <ul class="desktop">
