--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <div class="logo desktop">
-            <img src="resources/images/ic-logo.svg" alt="Academy logo">
+            <img src="resources/images/colmar_favicon.ico" alt="Academy logo">
             <span class="colmar">Colmar</span>
             <span class="academy">Academy</span>
         </div>
